configure Mailtrap and html template

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ MONGODB=mongodb+srv://thiagowebd3v:7nU06mWh9dqI4fKz@auth-db.dkcp1.mongodb.net/au
 PORT=5000
 JWT_SECRET=wackensmash666thebestintheworld
 NODE_ENV=development
+MAILTRAP_TOKEN=8fa3b27332e35d80f501dd6e4109ba06
+MAILTRAP_ENDPOINT=https://send.api.mailtrap.io/
